# AI-Inference-Engine

./: CMakeLists.txt  README.md  dummy.txt  history.txt  main.cpp
include/: inference_engine.h
src/: inference_engine.cpp
